# llm-prompt-techniques-jp

./: .gitignore  README.md  pyproject.toml
notes/fresh-prompt/: README.md  create_fresh_prompt_demo.ipynb  note_japanese_search.ipynb
notes/rephrase-and-respond/: README.md  note.ipynb
techniques/fresh-prompt/: note_english_search.ipynb
techniques/fresh-prompt/data/: freshprompt_demo.txt
techniques/rephrase-and-respond/: README.md  note.ipynb
