[tool.poetry]
name = "techniques"
version = "0.1.0"
description = ""
authors = ["yoshino"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.8"
openai = "^1.2.0"
python-dotenv = "^1.0.0"
google-search-results = "^2.4.2"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
